<resources>
    <string name="app_name">Notification Center for Pebble</string>
    <string name="title_activity_main">Notification Center</string>
    <string-array name="app_modes">
        <item>Excluding mode</item>
        <item>Including mode</item>
    </string-array>
    <string-array name="vibrationModeValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="shakeActions">
        <item>Nothing</item>
        <item>Stop periodic vibration</item>
        <item>Dismiss notification</item>
    </string-array>
    <string-array name="shakeActionValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
	<string-array name="lightNotifications">
	    <item>Never</item>
	    <item>Always</item>
	    <item>After sunset</item>
	</string-array>
	<string-array name="lightNotificationValues">
	    <item>1</item>
	    <item>2</item>
	    <item>3</item>
	</string-array>
    <string-array name="pebbleFonts">
        <item>Gothic 14</item>
        <item>Gothic 14 Bold</item>
        <item>Gothic 18</item>
        <item>Gothic 18 Bold</item>
        <item>Gothic 24</item>
        <item>Gothic 24 Bold</item>
        <item>Gothic 28</item>
        <item>Gothic 28 Bold</item>
        <item>Bitham 30 Black</item>
        <item>Bitham 42 Bold</item>
        <item>Bitham 42 Light</item>
        <item>Bitham 42 Medium Numbers</item>
        <item>Bitham 34 Medium Numbers</item>
        <item>Bitham 34 Light Subset</item>
        <item>Bitham 18 Light Subset</item>
        <item>Roboto 21 Condensed</item>
        <item>Roboto 49 Subset</item>
        <item>Droid Serif 28 Bold</item>
    </string-array>
    <string-array name="tasker_actions">
        <item>Send notification</item>
        <item>Change setting</item>
    </string-array>
    <string-array name="pebble_app_options">
        <item>NC Notification</item>
        <item>Pebble Notification</item>
        <item>No Notification</item>
    </string-array>
    <string name="title_activity_tasker_setup">TaskerSetupActivity</string>
    <string name="action_settings">Settings</string>
    <string name="appModePickerLabel">App Selection:</string>
    <string name="appModePickerDescription">In <b>including</b> mode only notifications from the apps that are selected will sent to Pebble. In <b>excluding</b> mode all notifications will be sent to Pebble except those from applications selected.</string>
    <string-array name="appModePickerModes">
        <item>Exclude</item>
        <item>Include</item>
    </string-array>
    <string name="regexModePickerLabel">Regex Filters:</string>
    <string name="regexModePickerDescription">Global filter by keywords/regular expressions for notifications that should be included/excluded from displaying.</string>
    <string-array name="regexModePickerModes">
        <item>Exclude</item>
        <item>Include</item>
    </string-array>
    <string-array name="settingSelectButtonAction">
        <item>Nothing</item>
        <item>Dismiss from Pebble</item>
        <item>Dismiss from Phone</item>
        <item>Open actions menu</item>
        <item>Action menu item 1</item>
        <item>Action menu item 2</item>
        <item>Action menu item 3</item>
        <item>Action menu item 4</item>
        <item>Action menu item 5</item>
        <item>Action menu item 6</item>
        <item>Action menu item 7</item>
        <item>Action menu item 8</item>
        <item>Action menu item 9</item>
        <item>Action menu item 10</item>
        <item>Action menu item 11</item>
        <item>Action menu item 12</item>
        <item>Action menu item 13</item>
        <item>Action menu item 14</item>
        <item>Action menu item 15</item>
        <item>Action menu item 16</item>
        <item>Action menu item 17</item>
        <item>Action menu item 18</item>
        <item>Action menu item 19</item>
        <item>Action menu item 20</item>
    </string-array>
    <string name="settingShakeAction">Shake action</string>
    <string-array name="settingActionVisibility">
        <item>Disable</item>
        <item>Above app actions</item>
        <item>Below app actions</item>
    </string-array>
    <string-array name="settingNotificationPriority">
        <item>Low</item>
        <item>Min</item>
        <item>Default</item>
        <item>High</item>
        <item>Max</item>
    </string-array>
    <string name="replacementListTitle">Regex Filters:</string>
    <string name="replacementListDescription">Global filter by keywords/regular expressions for notifications that should be included/excluded from displaying.</string>
    <string name="replacement_description">In this window you can define replacement pairs. Notification Center will swap specified characters with specified text. Use that to remove or translate characters that Pebble does not display to readable text.</string>
    <string name="original_character">Original character:</string>
    <string name="replacement">Replacement:</string>
    <string name="enterChracter">You need to enter one character or unicode code for it!</string>
    <string name="importNoFiles">No dictionary files found.\n\nPlace your replacement dictionary .txt files into NotificationCenter folder on your phone\'s storage and try again.</string>
    <string name="pebbleAppsDescription">NC is like any other app on Pebble - when notification comes, it will close whatever app was active. This is fine most of the time, but for some apps you might not want this (for example you wouldn\'t want to interrupt running stopwatch). \n\nThis view allows you to set NC to produce native Pebble notifications or simply turn off notifications if specific app is open on Pebble. \n\nFor this feature to work, you need to enable Developer Connection (instructions are in the FAQ accessible from the 3-dot menu in the top right corner). After that press + button above to add apps.</string>
    <string name="clearHistory">Clear History</string>
    <string name="deleteHistoryConfirm">Do you really want to clear whole notification history?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="historyCleared">History cleared</string>
    <string name="openingPebbleAppFailed">Opening Pebble app failed. Do you have Pebble app installed?</string>
    <string name="pebbleAppInstallDialog">Do you want to open Pebble App Store to install Notification Center to your
        Pebble?
    </string>
    <string name="openInPebbleAppStore">Open NC in Pebble App Store</string>
    <string name="settingResetToDefault">Reset to default settings</string>
    <string name="settingResetToDefaultDescription">When you press this button, all below settings will reset to default settings and will automatically sync with default settings until you change them manually.</string>
    <string name="settingResetToDefaultButton">RESET</string>
    <string name="settingSendOngoing">Send ongoing notifications</string>
    <string name="settingSendOngoingDescription">Send notifications that are not just one time event, but something
        ongoing (for example ongoing file download or app instalation)
    </string>
    <string name="settingSendBlankNotifications">Send blank notifications</string>
    <string name="settingSendBlankNotificationsDescription">When checked, NC will also send completely blank
        notifications from this app
    </string>
    <string name="settingSendIdenticalNotifications">Send identical notifications</string>
    <string name="settingSendIdenticalNotificationsDescription">By default NC will not forward notification if notification with exact same text is already present in the notification tray. Check this if for example app generates periodic reminders with identical content.
    </string>
    <string name="settingSwitchToRecent">Switch to most recent notification</string>
    <string name="settingSwitchToRecentDescription">When this is checked and new notification comes from this app, it
        will switch to that notification instead of queuing it. Only works on watchapp notifications.
    </string>
    <string name="settingDismissUpwards">Dismiss Upwards</string>
    <string name="settingDismissUpwardsDescripition">When checked and you dismiss notification on the phone, it will
        also disappear on the Pebble. Only works on Android 4.3 and newer.
    </string>
    <string name="settingsCategoryInboxParsing">Inbox Parsing</string>
    <string name="settingAlternateInboxParser">Use alternate inbox parser</string>
    <string name="settingAlternateInboxParserDescription">If app does not support Android Wear notifications, this is next best thing. It tries to improve formatting of
        inbox notifications (for example Gmail notification with multiple messages). It enables below options and generates
        notifications with a bit less clutter. It is recommended to keep this enabled unless notification looks weird on
        Pebble or is missing information. Android 4.1 or newer required.
    </string>
    <string name="settingReverseInbox">Reverse inbox</string>
    <string name="settingReverseInboxDescription">Check this if app does not follow standards and displays new messages
        at the bottom instead of at the top.
    </string>
    <string name="settingDisplayFirstOnly">Display newest message only</string>
    <string name="settingDisplayFirstOnlyDescription">Instead of displaying all the messages from the notification,
        display first one only.
    </string>
    <string name="settingsCategoryRegularExpressions">Regular expressions</string>
    <string name="settingsCategoryVibration">Vibration</string>
    <string name="settingVibrationPattern">Vibration pattern</string>
    <string name="settingVibrationPatternDescription">Here you can define vibration pattern for this app. Pattern is in
        format \'vibrateTime, pauseTime, vibrateTime, pauseTime ...\', where times are in miliseconds. For example
        \'100, 200, 300\' will vibrate for 100ms, then wait 200 ms and then again vibrate for 300ms. Limit is 20 total numbers (so 10 vibrations and 10 pauses). Maximum total duration is 10 seconds. If you want to disable vibration, just enter 0. Only works on watchapp notifications.
    </string>
    <string name="settingUseProvidedVibration">Use vibration pattern provided by notification</string>
    <string name="backupConfigMenuOption">Backup Config</string>
    <string name="restoreConfigMenuOption">Restore Config</string>
    <string name="help">Help / FAQ</string>
    <string name="settingStatusbarColor">Statusbar color</string>
    <string name="settingStatusbarColorDescription">Color of the statusbar above notification. This can be used to quickly distinguish between apps (for example Gmail is red, Facebook is blue etc.). By default this setting will use color provided by app or default to black if app does not provide color. But you can customize it and pick your own color if app does not provide it or you don\'t like one app provides.</string>
    <string name="settingNotificationIcon">Native notification Icon</string>
    <string name="settingNotificationIconDescription">Icon of the notification. Only for native notifications. Blank icon (just grey square) means NC will try to automatically determine the icon of the app. Images are loaded from the internet, so you may not be able to change this setting while offline.</string>
    <string name="clear_temporary_mutes">Clear temporary mutes</string>
</resources>