<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/list_background"
            android:clickable="true"

            style="@style/AppSettingParent">

        <TextView
                android:id="@+id/name"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppSettingsName"
                android:text="@string/settingStatusbarColor"
                />

        <TextView
                android:id="@+id/description"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_alignParentLeft="true"
                style="@style/AppSettingsDesc"
                android:text="@string/settingStatusbarColorDescription"
                />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/description"
        android:text="@string/settingResetToDefaultButton"/>

    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/black_border"
            android:layout_alignParentLeft="true"
            android:padding="1dp"
            android:layout_below="@id/description"
            android:id="@+id/colorDisplayBorder"
            android:layout_toLeftOf="@id/resetButton">
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:id="@+id/colorDisplay"/>
            </FrameLayout>

    </RelativeLayout>
